Improve frontend
